moving editing around, and fixing spacing

--- a/src/Components/Links.css
+++ b/src/Components/Links.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  max-width: 850px;
 }
 
 .linkWrapper {
@@ -27,4 +29,11 @@
 
 .linkWrapper > h3 {
   font-size: 1.6rem;
+}
+
+@media (min-width: 600px) {
+  .linkWrapper {
+    padding-right: 2rem;
+    padding-left: 2rem;
+  }
 }
